--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,25 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+html{
+  -webkit-text-size-adjust: none; // отключит встроенную эвристику мобильного Safari
+  min-width: 320px;
+  overflow-x: hidden;
+}
+body {
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+  min-width: 320px;
+  // overflow-: hidden;
 }
 
 code {
